libpam-mkhomedir-hpc (0.2) UNRELEASED; urgency=medium

  * Handle configuration options in a file pam_mkhomedir.ini

 -- Ana Guerrero <ana-externe.guerrero@edf.fr>  Fri, 08 Sep 2017 11:23:25 +0000

libpam-mkhomedir-hpc (0.1) calibre9; urgency=low

  * Initial release

 -- Rémi Palancher <remi-externe.palancher@edf.fr>  Mon, 24 Apr 2017 10:47:11 +0100