@@ -2,6 +2,7 @@
 home_dir=/home
 scratch_dir=/scratch
 skel_dir=/etc/skel
-debug_mode=True
+; three levels: error, info, debug
+debug_level=info
 ; True if we want to restrict the rights
 acl=True
