@@ -1,6 +1,7 @@
 libpam-mkhomedir-hpc (0.2) UNRELEASED; urgency=medium
 
   * Handle configuration options in a file pam_mkhomedir.ini
+  * Modify syslog functions to set priority levels for the messages.
 
  -- Ana Guerrero <ana-externe.guerrero@edf.fr>  Fri, 08 Sep 2017 11:23:25 +0000
 
